<resources>
    <string name="search">Search</string>
    <string name="addPdf">Add PDF</string>
    <string name="newText">New Text</string>
    <string name="submit">Submit</string>
    <string name="language">Language</string>
    <string name="creator">Created by Mateusz Baranowski</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="speed">words per minute</string>
    <string name="apply">Apply</string>
</resources>
